# stellarator-optimisation

./: .gitignore  LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/reference/: template_project.reactor.md
output/: biot_savart_opt.json  curves_init.vtu  curves_opt_long.vtu  curves_opt_short.vtu  surf_init.vts  surf_opt_long.vts  surf_opt_short.vts
scripts/: gen_api_ref.py  install-bluemira.sh
stellarator_project/: __init__.py  bluemira_nurbs_utils.py  geometry_tutorial.ex.py  helias_plasma_coil_finite_optimisation.py  helias_plasma_coil_optimisation.py  stellarator.py  stellarator_build.ex.py  stellarator_tf_shapes.py  tools.py
stellarator_project/data/coils/: HELIAS5_coils_all_corr.h5  magnets_nurbs_data.json  normals_data.json  test_magnets_nurbs_data.json
stellarator_project/data/magnets/: magnets_nurbs_data.json
stellarator_project/data/plasma/: plasma_surface_nurbs_data.json  test_plasma_surface_nurbs_data.json
stellarator_project/plasma/: __init__.py  builder.py  designer.py  desinger.py  manager.py
stellarator_project/tf_coil/: __init__.py  builder.py  designer.py  manager.py
studies/first/: run.py
studies/first/config/: config.json
studies/first/data/coils/: HELIAS5_coils_fourier.h5  magnets_nurbs_data.json  normals_data.json  test_magnets_nurbs_data.json
studies/first/data/plasma/: finite_plasma_surface_nurbs_data.json  plasma_surface_nurbs_data.json  test_plasma_surface_nurbs_data.json
tests/: __init__.py
