[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stellarator-project"
dynamic = ["version"]
description = 'A template for Bluemira projects.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  # { name = "Graeme Turkington", email = "graeme.turkington@ukaea.uk" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  # "Programming Language :: Python :: 3.10",
]

dependencies = ["bluemira", "numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pre-commit"]
test = [
  "pytest",
  "coverage[toml]",
  "pytest-html",
  "pytest-metadata",
  "pytest-json-report",
]
docs = ["mkdocs-material", "mkdocstrings[python]"]
lint = ["ruff", "mypy"]

[project.urls]
Documentation = "https://github.com/{{ org-name }}/stellarator-project#readme"
Issues = "https://github.com/{{ org-name }}/stellarator-project/issues"
Source = "https://github.com/{{ org-name }}/stellarator-project"

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "stellarator_project/_version.py"

# env: default
# [tool.hatch.envs.default]
# type = "conda"
# command = "conda"
# python = "3.8"
# environment-file = "bluemira/conda/environment.yml"
# features = ["dev", "test", "docs", "lint"]

# env: test
# [tool.hatch.envs.test]
# features = ["test"]
# [[tool.hatch.envs.test.matrix]]
# python = ["3.8", "3.10"]
# [tool.hatch.envs.test.scripts]
# tests = "pytest {args:tests}"
# tests-cov = "coverage run -m pytest {args:tests}"
# cov-report = ["- coverage combine", "coverage report"]
# cov-all = ["tests-cov", "cov-report"]

# env: docs
# [tool.hatch.envs.docs]
# features = ["docs"]
# [tool.hatch.envs.docs.scripts]
# build = "mkdocs build"
# serve = "mkdocs serve"

# env: lint
# [tool.hatch.envs.lint]
# detached = true                               # Don't inherit from default (does not download project dependencies)
# dependencies = ["ruff", "mypy", "pre-commit"]
# [tool.hatch.envs.lint.scripts]
# typing = "mypy --install-types --non-interactive {args:src/stellarator_project tests}"
# style = ["ruff {args:.}"]
# fmt = ["pre-commit run --all-files --hook-stage manual"]
# all = ["style", "typing"]

# tool: ruff
[tool.ruff]
line-length = 89
preview = true
output-format = "concise"

[tool.ruff.lint]
exclude = [
  ".git",
  "__pycache__",
  "documentation",
  ".env",
  ".idea",
  ".pytest_cache",
  "htmlcov",
]
select = ["ALL"]
ignore = [
    "ANN",     # type annotations
    "EM",      # string in error messages
    "PD",      # Pandas
    "B019",    # using cache memory leaks
    "COM812",  # enforce trailing comma, disagrees with black/ruff format
    "D107",
    "D200",    # docs stuff
    "D203",
    "D205",
    "D301",
    "D400",
    "D401",
    "DOC502",  # Omit non-explicit exceptions from docstrings
    "DTZ005",  # datetime timezone arg
    "E203",    # black/ruff format conflicts
    "FIX002",  # Line contains todo
    "ISC001",  # ruff format conflict
    "PLW1514", # Specify file open encoding
    "PTH123",  # use Path.open
    "TRY003",  # put error messages in error class
    "FURB152",  # 3.14 != pi
    "PIE790",  # TMP for false positive ...
    "ERA",  # remove commented out code
    "T201",
    "DOC201",
]
unfixable = [
  "F401", # Don't touch unused imports
]

[tool.ruff.lint.isort]
known-first-party = ["stellarator_project"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"__init__.py" = ["F401", "F403"]
"studies/**/*" = ["INP001", "CPY001"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.coverage.run]
source_pkgs = ["stellarator_project", "tests"]
branch = true
parallel = true
omit = ["stellarator_project/_version.py"]

[tool.coverage.paths]
fusrr = ["stellarator_project", "*/stellarator_project"]
tests = ["tests", "*/stellarator_project/tests"]

[tool.coverage.report]
"exclude_also" = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
omit = ["stellarator_project/_version.py"]
